# hts1

./: .gitignore  CLAUDE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
.github/workflows/: deploy.yml
docs/: agentic_search.md  deployment.md  frontend.md  hts_json_processing.md  mechanisms.md  node_server.md  status.md
frontend/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ClassifyForm.tsx  CompareView.tsx  Header.tsx  ResultsTable.tsx  SingleView.tsx
frontend/src/components/intermediates/: AgenticIntermediates.tsx  EmbeddingsIntermediates.tsx  GarIntermediates.tsx  IntermediatesPanel.tsx  RerankIntermediates.tsx
hts_classifier/: app.py
hts_classifier/api/routes/: classify.py  health.py
hts_classifier/classifiers/: agentic.py  base.py  embeddings.py  gar.py  rerank.py
hts_classifier/core/: config.py  models.py
hts_classifier/data/: loader.py  processor.py
hts_classifier/services/: vector_store.py  vertex.py
scripts/: export_embeddings.py  ingest.py
src/: config.ts  index.ts  types.ts
src/classifiers/: agentic.ts  embeddings.ts  gar.ts  rerank.ts
src/data/: processor.ts
src/services/: vectorStore.ts  vertex.ts
